@@ -38,6 +38,17 @@ require_once(t3lib_extMgm::extPath('seminars') . 'class.tx_seminars_objectfromdb
 class tx_seminars_category extends tx_seminars_objectfromdb {
 	/** string with the name of the SQL table this class corresponds to */
 	protected $tableName = SEMINARS_TABLE_CATEGORIES;
+
+	/**
+	 * Returns the icon of this category.
+	 *
+	 * @return string the file name of the icon (relative to the extension
+	 *                upload path) of the category, will be empty if the
+	 *                category has no icon
+	 */
+	public function getIcon() {
+		return $this->getRecordPropertyString('icon');
+	}
 }
 
 if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/seminars/class.tx_seminars_category.php']) {
