@@ -300,6 +300,9 @@ plugin.tx_seminars_pi1 {
 	# the normal sorting)
 	sortListViewByCategory = 0
 
+	# how to display the categories in the event list view: icon, text, both
+	categoriesInListView = both
+
 	# whether to use the label "Price" as column header for the standard price (instead of "Standard price")
 	generalPriceInList = 0
 
