@@ -389,5 +389,150 @@ class tx_seminars_frontEndCategoryList_testcase extends tx_phpunit_testcase {
 			$this->fixture->render()
 		);
 	}
+
+	public function testCreateCategoryListWithNoGivenCategoriesReturnsEmptyString() {
+		$this->assertEquals(
+			'',
+			$this->fixture->createCategoryList(array())
+		);
+	}
+
+	public function testCreateCategoryListWithConfigurationValueSetToTextReturnsCategoryTitle() {
+		$this->fixture->setConfigurationValue('categoriesInListView', 'text');
+		$singleCategory =
+			array(
+				'99' => array(
+					'title' => 'test',
+					'icon' => '',
+				)
+		);
+
+		$this->assertEquals(
+			'test',
+			$this->fixture->createCategoryList($singleCategory)
+		);
+	}
+
+	public function testCreateCategoryListWithConfigurationValueSetToTextDoesNotReturnIcon() {
+		$this->fixture->setConfigurationValue('categoriesInListView', 'text');
+		$singleCategory =
+			array(
+				'99' => array(
+					'title' => 'test',
+					'icon' => 'foo.gif',
+				)
+		);
+
+		$this->testingFramework->createDummyFile('foo.gif');
+		$categoryTitle = $this->fixture->createCategoryList($singleCategory);
+		$this->testingFramework->deleteDummyFile('foo.gif');
+
+		$this->assertNotContains(
+			'foo.gif',
+			$categoryTitle
+		);
+	}
+
+	public function testCreateCategoryListWithInvalidConfigurationValueReturnsCategoryTitle() {
+		$this->fixture->setConfigurationValue('categoriesInListView', 'foo');
+		$singleCategory =
+			array(
+				'99' => array(
+					'title' => 'test',
+					'icon' => '',
+				)
+		);
+
+		$this->assertEquals(
+			'test',
+			$this->fixture->createCategoryList($singleCategory)
+		);
+	}
+
+	public function testCreateCategoryListWithConfigurationValueSetToIconSetsCategoryTitleAsImageTitle() {
+		$this->fixture->setConfigurationValue('categoriesInListView', 'icon');
+		$singleCategory =
+			array(
+				'99' => array(
+					'title' => 'test',
+					'icon' => 'foo.gif',
+				)
+		);
+
+		$this->testingFramework->createDummyFile('foo.gif');
+		$categoryIcon = $this->fixture->createCategoryList($singleCategory);
+		$this->testingFramework->deleteDummyFile('foo.gif');
+
+		$this->assertRegExp(
+			'/<img.*title="test"*.\/>/',
+			$categoryIcon
+		);
+	}
+
+	public function testCreateCategoryListWithConfigurationValueSetToIconDoesNotReturnTitleOutsideTheImageTag() {
+		$this->fixture->setConfigurationValue('categoriesInListView', 'icon');
+		$singleCategory =
+			array(
+				'99' => array(
+					'title' => 'test',
+					'icon' => 'foo.gif',
+				)
+		);
+
+		$this->testingFramework->createDummyFile('foo.gif');
+		$categoryIcon = $this->fixture->createCategoryList($singleCategory);
+		$this->testingFramework->deleteDummyFile('foo.gif');
+
+		$this->assertNotRegExp(
+			'/<img.*\/>.*test/',
+			$categoryIcon
+		);
+	}
+
+	public function testCreateCategoryListWithConfigurationValueSetToIconCanReturnMutlpileIcons() {
+		$this->fixture->setConfigurationValue('categoriesInListView', 'icon');
+		$multipleCategories =
+			array(
+				'99' => array(
+					'title' => 'test',
+					'icon' => 'foo.gif',
+				),
+				'100' => array(
+					'title' => 'new_test',
+					'icon' => 'foo2.gif',
+				)
+		);
+
+		$this->testingFramework->createDummyFile('foo.gif');
+		$this->testingFramework->createDummyFile('foo2.gif');
+		$categoryIcons = $this->fixture->createCategoryList($multipleCategories);
+		$this->testingFramework->deleteDummyFile('foo.gif');
+		$this->testingFramework->deleteDummyFile('foo2.gif');
+
+		$this->assertRegExp(
+			'/<img.*title="test"*.\/>.*<img.*title="new_test"*.\/>/',
+			$categoryIcons
+		);
+	}
+
+	public function testCreateCategoryListWithConfigurationValueSetToTextCanReturnMultipleCategoryTitles() {
+		$this->fixture->setConfigurationValue('categoriesInListView', 'text');
+		$multipleCategories =
+			array(
+				'99' => array(
+					'title' => 'foo',
+					'icon' => 'foo.gif',
+				),
+				'100' => array(
+					'title' => 'bar',
+					'icon' => 'foo2.gif',
+				)
+		);
+
+		$this->assertRegExp(
+			'/foo.*bar/',
+			$this->fixture->createCategoryList($multipleCategories)
+		);
+	}
 }
 ?>
